refactor: core模块代码格式化、清理